# Bamboo-bot

./: .env.example  .gitignore  ARCHITECTURE_FIXES_REPORT.md  CLAUDE.md  Cargo.toml  MIGRATION_v0.3.0.md  README.md  SESSION_SUMMARY_2026-02-17.md  TECHNICAL_DEBT.md  TECHNICAL_DEBT_FINAL.md  TECHNICAL_DEBT_PROGRESS.md  TEST_RESULTS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  e2e-docker.yml  e2e-tests.yml  release.yml
crates/agent-llm/: Cargo.toml
crates/agent-mcp/: Cargo.toml
crates/chat_core/: Cargo.toml
crates/web_service/: Cargo.toml
crates/web_service/src/: error.rs  lib.rs  main.rs  model_config_helper.rs  server.rs
crates/web_service/src/controllers/: command_controller.rs  copilot_auth_controller.rs  gemini_controller.rs  mod.rs  openai_controller.rs  settings_controller.rs  skill_controller.rs  workspace_controller.rs
crates/web_service/src/controllers/anthropic/: mod.rs
crates/web_service/src/services/: anthropic_model_mapping_service.rs  gemini_model_mapping_service.rs  skill_service.rs
crates/web_service/tests/: anthropic_api_tests.rs  gemini_api_tests.rs  openai_api_tests.rs  settings_config_tests.rs
docker/: Dockerfile  README.md  build.sh  config.example.json  docker-compose.yml
docs/: BRANDING_SYSTEM.md  CHANGELOG.md  INDEX.md  MIGRATION.md  ORGANIZATION_SUMMARY.md  README.md  SECURITY_FIXES.md
e2e/: .env.test  .env.test.example  .gitignore  NEW_TESTS_REPORT.md  PROGRESS_REPORT_1.md  PROGRESS_REPORT_2.md  PROGRESS_REPORT_4.md  README.md  REPAIR_COMPLETE.md  REPAIR_PLAN.md  global-setup.ts  global-teardown.ts  package.json  playwright.config.ts
e2e-backend/: Cargo.toml
e2e-backend/src/: main.rs
plans/: README.md  sidecar-architecture-plan.md
scripts/: cleanup-server.sh  copy-sidecar.js  e2e-simple.sh  fix-e2e.sh  lotus-dist.cjs  rebrand.cjs  run-e2e-tests.sh  tauri-mode.cjs  test-agent.sh  test-static-serving.sh
src-tauri/: .gitignore  Cargo.toml  bodhi-settings-env-vars.md  bodhi-settings-skills.md  bodhi-settings-snapshot.md  mermaid-enhancement-check-report.md  pavilion-localhost-1420-snapshot.md  tauri.conf.json
(+337 files in other folders)
