[package]
name = "e2e-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "web_service_standalone"
path = "src/main.rs"

[dependencies]
bamboo-agent = { version = "0.2.2", default-features = false }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
