[package]
name = "e2e-backend"
version = "0.3.2"
edition = "2021"

[[bin]]
name = "web_service_standalone"
path = "src/main.rs"

[dependencies]
bamboo-agent = { workspace = true }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
env_logger = "0.11"
log = "0.4"
