[package]
name = "web_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
actix-cors = { workspace = true }
actix-files = "0.6"
actix-governor = "0.5"
anyhow = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
webbrowser = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { version = "0.4", features = ["json"] }
reqwest-retry = "0.7"
chat_core = { path = "../chat_core" }
agent-llm = { path = "../agent-llm" }
agent-server = { path = "../agent-server" }
agent-tools = { path = "../agent-tools" }
agent-core = { path = "../agent-core" }
agent-skill = { path = "../agent-skill" }
agent-metrics = { path = "../agent-metrics" }

[dev-dependencies]
actix-http = { workspace = true }
tempfile = { workspace = true }
agent-llm = { path = "../agent-llm" }
reqwest = { workspace = true }
wiremock = { workspace = true }
async-trait = { workspace = true }
